# dms_rust_app

./: .env  Cargo.toml
src/: main.rs
src/animation/: mod.rs
src/database/: mod.rs
src/droptypes/: mod.rs
src/error/: mod.rs
src/helpers/: mod.rs
src/messages/: mod.rs
src/schemas/: mod.rs
src/widgets/: mod.rs
src/widgets/animation/: mod.rs
src/widgets/droptypes/: mod.rs
src/widgets/products/: mod.rs
src/widgets/sidebar/: mod.rs
